NIFI-11259 - PR feedback